--- a/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
+++ b/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
@@ -1,11 +1,15 @@
 <form [formGroup]="groupName">
+    <label [for]="label" *ngIf="label" class="block mb-1 text-xs font-medium text-gray-900 dark:text-white select-none">
+        {{ label }}
+    </label>
     <select 
         [formControl]="controlName" 
-        id="category" 
+        [id]="label" 
         [enableDisable]="prev ? !controlName.parent?.value[prev] : false"
-        (ngModelChange)="resetChildren()"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        (ngModelChange)="resetChildren(); actionBtnClicked()"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 focus-visible:outline-none">
         <option [ngValue]="null" selected disabled>{{ placeholder }}</option>
+        <option [ngValue]="null">{{ placeholder }}</option>
         <ng-container *ngIf="filter">
             <ng-container *ngFor="let item of data | filterByParentId: controlName.parent?.value[prev]?.id">
                 <option [ngValue]="item">{{ item[field] }}</option>
