updated to product list and item page

--- a/antsystems-frontend/src/app/apps/inventory/products-list/products-list.component.html
+++ b/antsystems-frontend/src/app/apps/inventory/products-list/products-list.component.html
@@ -6,7 +6,10 @@
             [columns]="columns" 
             [sorting]="sorting"
             [verticalGrid]="false"
-            [horizontalGrid]="true">
+            [horizontalGrid]="true"
+            (itemsSelected)="navTo($event)">
         </gui-grid>
     </div>
 </div>
+
+<button routerLink="/apps/inventory/products/product/EP90BP-4">test</button>
