--- a/antsystems-frontend/src/app/apps/shared/components/dropdown/dropdown.component.html
+++ b/antsystems-frontend/src/app/apps/shared/components/dropdown/dropdown.component.html
@@ -1,20 +1,28 @@
-<input type="text" id="sku"
-    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-    placeholder="SKU" 
-    [value]="value" 
-    (click)="show = true">
-<div *ngIf="show"
-    class="absolute z-50 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg w-full focus-visible:outline-none flex flex-col text-center">
-    <span 
-        *ngFor="let action of actionBtnConfig" 
-        class="cursor-pointer py-1 text-blue-500 text-sm select-none"
-        (click)="actionBtnClicked(action.name)">
-        {{ action.name }} +
-    </span>
-    <span *ngFor="let option of optionsData"
-        class="cursor-pointer py-1 text-sm hover:bg-blue-500 w-full hover:text-white select-none"
-        (click)="selectOption(option.name)">
-        {{ option.name }}
-    </span>
-</div>    
-<div *ngIf="show" class="bg-transparent w-full h-full fixed top-0 left-0" (click)="show = false"></div>
+<!-- <form [formGroup]="groupName"> -->
+    <input type="text" [id]="null"
+        class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 disabled:opacity-70"
+        placeholder="SKU"
+        #inputVal
+        [formControl]="control"
+        (keyup)="onInputChange($event)"
+        (click)="show.next(true)"
+        autocomplete="off"
+        (blur)="hideOptions()">
+    <div *ngIf="show | async"
+        class="absolute z-50 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg w-full focus-visible:outline-none flex flex-col text-center">
+        <span 
+            *ngFor="let action of actionBtnConfig" 
+            class="cursor-pointer py-1 text-blue-500 text-sm select-none hover:bg-blue-500 w-full hover:text-white"
+            (click)="actionBtnClicked(action.name)">
+            {{ action.name }} +
+        </span>
+        <ng-container *ngFor="let option of optionsData | textFilter:control.value:['name']; let i=index">
+            <span *ngIf="i < 5"
+                class="cursor-pointer py-1 text-sm hover:bg-blue-500 w-full hover:text-white select-none"
+                (click)="selectOption(option.name)">
+                {{ option.name }}
+            </span>        
+        </ng-container>
+    </div>
+<!-- </form> -->
+
