--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
+
+
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -72,3 +76,4 @@ label {
 input {
   @apply focus-visible:outline-none
 }
+
