--- a/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
+++ b/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
@@ -5,7 +5,6 @@
     <select
         [formControl]="controlName"
         [id]="label"
-        [enableDisable]="prev ? !controlName.parent?.value[prev] : false"
         (ngModelChange)="resetChildren()"
         [compareWith]="compareFn"
         class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 focus-visible:outline-none">
@@ -23,3 +22,5 @@
         </ng-container>
     </select>
 </form>
+
+<!-- [enableDisable]="prev ? !controlName.parent?.value[prev] : false" -->
