swapped modal for mddmodal

--- a/antsystems-frontend/src/app/apps/inventory/products/item/item.component.html
+++ b/antsystems-frontend/src/app/apps/inventory/products/item/item.component.html
@@ -178,6 +178,7 @@
                                 [controlName]="productForm.get('categories.category')"
                                 next="subCategory"
                                 placeholder="Category"
+                                (selectChangedEvent)="valueChangedAlert($event)"
                             ></ant-select>
                         </div>
                         <div class="w-1/6">
