--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -4,6 +4,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
 
+// Font Awesome
+@import "@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "@fortawesome/fontawesome-free/scss/solid.scss";
+@import "@fortawesome/fontawesome-free/scss/regular.scss";
+@import "@fortawesome/fontawesome-free/scss/brands.scss";
+
+// MDB SCSS
+@import "mdb-angular-ui-kit/assets/scss/mdb.scss";
 
 * {
   box-sizing: border-box;
