--- a/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
+++ b/antsystems-frontend/src/app/apps/shared/components/select/select.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="groupName">
-    <label [for]="label" *ngIf="label" class="block mb-1 text-xs font-medium text-gray-900 dark:text-white select-none">
+    <label [for]="label" *ngIf="label" class="block text-xxs font-medium text-gray-900 dark:text-white select-none">
         {{ label }}
     </label>
     <select
