--- a/antsystems-frontend/src/app/apps/purchase/purchase.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/purchase.component.html
@@ -1,1 +1,5 @@
-<p>purchase works!</p>
+<div class="flex justify-center h-10 my-2">
+    <button [routerLink]="['vendors']" class="px-2 mx-2 nav-item" routerLinkActive="nav-item-active">Vendors</button>
+    <button [routerLink]="['purchase-orders']" class="px-2 mx-2 nav-item" routerLinkActive="nav-item-active">Purchase Orders</button>
+</div>
+<router-outlet></router-outlet>
