--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -85,3 +85,10 @@ input {
   @apply focus-visible:outline-none
 }
 
+.ant-input {
+  @apply bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 disabled:opacity-70;
+}
+
+.text-xxs {
+  font-size: 10px;
+}
