--- a/antsystems-frontend/src/app/apps/purchase/purchase-orders/purchase-order-list/purchase-order-list.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/purchase-orders/purchase-order-list/purchase-order-list.component.html
@@ -1,1 +1,9 @@
-<p>purchase-order-list works!</p>
+<div class="mt-4">
+    <gui-grid 
+        [source]="source" 
+        [columns]="columns" 
+        [sorting]="sorting" 
+        [verticalGrid]="false"
+        [horizontalGrid]="true">
+    </gui-grid>
+</div>
