--- a/antsystems-frontend/src/app/apps/inventory/products/item/item.component.html
+++ b/antsystems-frontend/src/app/apps/inventory/products/item/item.component.html
@@ -439,10 +439,10 @@
             <!-- Save/Cancel -->
             <div class="mt-6 flex gap-6 justify-center">
                 <button type="button"
-                    class="w-28 focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Cancel</button>
+                    class="w-28 focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm py-2.5 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Cancel</button>
                 <button type="button" (click)="onSave()" [disabled]="!productForm.valid"
                     [ngClass]="{'btn-disabled': !productForm.valid}"
-                    class="w-28 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Save</button>
+                    class="w-28 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Save</button>
                 <button (click)="patch()">patch</button>
                 <button (click)="onSave()">test</button>
 
