--- a/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
@@ -1,10 +1,10 @@
 <div class="product-container">
-    <div class="header flex justify-center items-center text-white font-semibold">Carriers</div>
+    <div class="header flex justify-center items-center text-white font-semibold">Vendors</div>
     <div class="content">
         <div class="flex justify-end mt-2">
             <!-- <button [routerLink]="['orders']" class="px-2 mx-2 nav-item" routerLinkActive="nav-item-active">Orders</button> -->
-            <button (click)="addVendor()" class="btn-primary flex justify-center items-center py-1">
-                Add Vendor
+            <button (click)="addCarrier()" class="btn-primary flex justify-center items-center py-1">
+                Add Carrier
                 <span class="material-symbols-outlined">
                     add
                 </span>
