--- a/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.scss
+++ b/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.scss
@@ -5,3 +5,23 @@
 textarea {
     resize: none;
   }
+
+  input[type="date"]::before {
+    content: attr(placeholder);
+    position: absolute;
+    color: #999999;
+  }
+  
+  input[type="date"] {
+    color: #ffffff;
+  }
+  
+  input[type="date"]:focus,
+  input[type="date"]:valid {
+    color: #666666;
+  }
+  
+  input[type="date"]:focus::before,
+  input[type="date"]:valid::before {
+    content: "";
+  }
