--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -92,3 +92,15 @@ input {
 .text-xxs {
   font-size: 10px;
 }
+
+.btn-primary {
+  @apply w-28 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
+}
+
+.btn-cancel {
+  @apply w-28 text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm py-2.5 dark:bg-red-600 dark:hover:bg-red-700 focus:outline-none dark:focus:ring-red-800;
+}
+
+.btn-disabled{
+  @apply text-white bg-blue-400 dark:bg-blue-500 cursor-not-allowed font-medium rounded-lg text-sm py-2.5 text-center
+}
