more FE updates

--- a/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
@@ -24,7 +24,9 @@
                     class=""
                     placeHolder=""
                     [options]="vendors"
+                    feild="companyName"
                     [control]="form.get('vendor')"
+                    (selectedItemEvent)="setVendor($event)"
                     >
                 </ant-dropdown>
             </div>
