--- a/antsystems-frontend/src/app/auth/login/login.component.html
+++ b/antsystems-frontend/src/app/auth/login/login.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="w-1/2">
-            <img src="../../../assets/Frame 152.png" alt="" class="h-full w-full">
+            <img src="../../../assets/login_frame.png" alt="" class="h-full w-full">
         </div>
     </div>
 </div>
