--- a/antsystems-frontend/src/app/auth/login/login.component.html
+++ b/antsystems-frontend/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="login-wrapper">
         <div class="login-form w-1/2">
             <!-- <img src="../../../assets/logoAntSystems_130-32 1.png" alt="" class="mt-2 ml-4"> -->
-            <img src="../../../assets/logoAntSystems_vertical 3.png" alt="" class="my-2 ml-4 h-8">
+            <img src="assets/logoAntSystems_vertical 3.png" alt="" class="my-2 ml-4 h-8">
 
             <hr class="text-black">
 
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="w-1/2">
-            <img src="../../../assets/login_frame.png" alt="" class="h-full w-full">
+            <img src="assets/login_frame.png" alt="" class="h-full w-full">
         </div>
     </div>
 </div>
