update to enviorment variables

--- a/antsystems-frontend/src/app/shell/shell.component.html
+++ b/antsystems-frontend/src/app/shell/shell.component.html
@@ -1,5 +1,5 @@
 <div class="w-screen h-14 bg-blue-dark flex items-center px-6">
-    <img src="../../assets/logoAntSystems_vertical2 1.png" alt="">
+    <img src="assets/logoAntSystems_vertical2 1.png" alt="">
 </div>
 <div class="w-screen h-14 bg-blue-med">
     <div class="module-nav md:px-40 lg:px-64">
